# Spacecraft-Telemetry-Health

./: .gitignore  README.md  pyproject.toml
dss_system/: __init__.py  api.py  fusion_engine.py  gru_model.py  joint_context_model.py  pass_aggregator.py  reliability_module.py  rule_engine.py  run_dss.py  simulation.py  trend_detector.py
flight_logs/: note_annotations.csv  operator_notes.csv
frontend/: index.html
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ConfidenceBar.tsx  DecisionRow.tsx  DecisionTimeline.tsx  Header.tsx  MissionSelector.tsx  ModeToggle.tsx  OverrideForm.tsx  PassCard.tsx  PassDetail.tsx  PassGrid.tsx  SeverityBadge.tsx  SimulationControls.tsx  SimulationFeed.tsx  TelemetryChart.tsx  TrendBanner.tsx
frontend/src/styles/: global.css
mission_operations/: fault_library.yaml  mission_events.yaml  scenario_library.yaml
telemetry_simulation/: mission_metadata.csv  scenario_log.csv
