[project]
name = "spacecraft-dss"
version = "0.1.0"
description = "Context-aware spacecraft decision support system using GRU telemetry anomaly detection and tiny NLP note parsing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
]

[project.scripts]
dss-run = "dss_system.run_dss:main"
dss-serve = "dss_system.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dss_system"]
